--- a/src/components/main/mainComponent.css
+++ b/src/components/main/mainComponent.css
@@ -2,6 +2,7 @@
    background-image: url(https://res.cloudinary.com/duqilis2i/image/upload/v1697466255/barbershop/homeLanding_kgwk88.jpg);
    width: 100%;
    height: 100vh;
+   background-size: cover;
 }
 
 .containerWelcome{
