--- a/src/components/pricing/pricing.css
+++ b/src/components/pricing/pricing.css
@@ -61,8 +61,6 @@
     display: flex;
     flex-direction: column;
     height: 50px;
-
-
 }
 
 .imgPrecio {
@@ -86,6 +84,7 @@
 
 
 }
+
 
 .btnReserva>span {
     font-size: 22px;
@@ -123,4 +122,7 @@
 .montoLista>p{
     font-size: 24px;
     font-family: "Poppins", Arial, sans-serif;
+}
+.itemPrice{
+    margin-right: 9px;
 }
