--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -49,3 +49,9 @@
     text-align: center;
     padding: 10px;
 }
+.pFooter{
+    color: white;
+    font-size: 17px;
+    font-family: "Poppins", Arial, sans-serif;
+    font-weight: 300;
+}
